@@ -1,0 +1,56 @@
+<?php
+/**
+ * PHP Server Monitor
+ * Monitor your servers and websites.
+ *
+ * This file is part of PHP Server Monitor.
+ * PHP Server Monitor is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * PHP Server Monitor is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with PHP Server Monitor.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ * @package     phpservermon
+ * @author      Andreas Ek
+ * @copyright   Copyright (c) 2008-2014 Pepijn Over <pep@neanderthal-technology.com>
+ * @license     http://www.gnu.org/licenses/gpl.txt GNU GPL v3
+ * @version     Release: @package_version@
+ * @link        http://phpservermon.neanderthal-technology.com/
+ * @since       phpservermon 2.1
+ **/
+
+class txtmsgMosms extends txtmsgCore {
+	// =========================================================================
+	// [ Fields ]
+	// =========================================================================
+	public $gateway = 1;
+	public $resultcode = null;
+	public $resultmessage = null;
+	public $success = false;
+	public $successcount = 0;
+
+	public function sendSMS($message) {
+
+		$mosms_url = "https://www.mosms.com/se/sms-send.php";
+		$mosms_data = rawurlencode( $message );
+
+		foreach( $this->recipients as $phone ){
+
+			$result = file_get_contents( $mosms_url . "?username=" . $this->username
+				. "&password=" . $this->password . "&nr=" . $phone . "&type=text"
+				. "&data=" . $mosms_data );
+
+		}
+
+		return $result;
+	}
+}
+
+?>
