@@ -57,6 +57,7 @@
                 <label class="control-label" for="sms_gateway">{label_sms_gateway}</label>
                 <div class="controls">
                     <select name="sms_gateway">
+                        <option value="mosms" {sms_selected_mosms}>{label_sms_gateway_mosms}</option>
                         <option value="mollie" {sms_selected_mollie}>{label_sms_gateway_mollie}</option>
                         <option value="spryng" {sms_selected_spryng}>{label_sms_gateway_spryng}</option>
                         <option value="inetworx" {sms_selected_inetworx}>{label_sms_gateway_inetworx}</option>
@@ -134,4 +135,4 @@
 <div class="alert alert-info hide">
     Please update!
 </div>
-<!--%%tpl_config_update--> 
+<!--%%tpl_config_update-->
